name:                io-throttle
version:             0.0.1
synopsis:            Throttler between a producer and a consumer function
description:         To be written. 
homepage:            https://github.com/mtesseract/io-throttle
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Schulte
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Throttle
  other-modules:       Ema
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , async
                     , stm-chans
                     , clock
                     , bytestring
                     , say
                     , text
  default-language:    Haskell2010
  ghc-options:       -Wall -O2 -fno-warn-type-defaults

source-repository head
  type:     git
  location: https://github.com/mtesseract/io-throttle
